fix partners section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="w-100" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
         <!--NAV-->
         <nav class="row">
             <ul class="row">
-                <li class="logo-li">
+                <li class="logo-li row">
                     <a href="#" class="logo">
                         <img src="img/logo-small.png" alt="logo">
                     </a>
@@ -57,7 +57,7 @@
     <!--MAIN-->
     <main>
         <!--JUMBOTRON-->
-        <div class="jumbotron viewport">
+        <div class="jumbotron w-100">
             <section class="big-container">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box row">
@@ -160,7 +160,6 @@
                     <!--/COLUMN CONTENT-->
                 </div>
                 <!--/SINGOLO COLUMN-->
-
                 <!--TEAM COLUMN-->
                 <div class="small-col">
                     <!--COLUMN HEADER-->
@@ -240,7 +239,6 @@
                     <!--/COLUMN CONTENT-->
                 </div>
                 <!--/TEAM COLUMN-->
-
                 <!--ENTERPRISE COLUMN-->
                 <div class="small-col">
                     <!--COLUMN HEADER-->
@@ -384,51 +382,51 @@
             </div>
         </section>
         <!--/SECTION 4-->
-        <!--SECTION 5-->
+        <!--SECTION 5 PARTNERS-->
         <section class="section-5">
-            <div class="cubes row">
-                <!--CUBE LEFT-->
-                <div class="cube row wrap">
-                    <div class="inner-cube" id="designit">
+            <div class="partners row">
+                <!--SQUARE LEFT-->
+                <div class="square row wrap">
+                    <div class="inner-square" id="designit">
                         <div class="row">
                             <img src="img/designit.svg" alt="designit">
                         </div>
                     </div>
-                    <div class="inner-cube row" id="asu">
+                    <div class="inner-square row" id="asu">
                         <img src="img/arizona_state_university.svg" alt="asu">
                     </div>
-                    <div class="inner-cube row" id="u-florida">
+                    <div class="inner-square row" id="u-florida">
                         <img src="img/university_of_florida.svg" alt="university of florida">
                     </div>
-                    <div class="inner-cube row" id="topps">
+                    <div class="inner-square row" id="topps">
                         <img src="img/topps.svg" alt="topps">
                     </div>
                 </div>
-                <!--/CUBE LEFT-->
-                <!--CUBE CENTER-->
-                <div class="cube cube-center">
+                <!--/SQUARE LEFT-->
+                <!--SQUARE CENTER-->
+                <div class="square square-center">
                     <img src="img/designit.svg" alt="designit">
                     <hr>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas consequuntur dolorum corrupti inventore optio rem rerum saepe fugiat, error dolor voluptatum eveniet quis aut molestias debitis. Cumque, distinctio architecto.</p>
                     <span>Morten Thomsen, Global IT Lead</span>
                 </div>
-                <!--/CUBE CENTER-->
-                <!--CUBE RIGHT-->
-                <div class="cube row wrap">
-                    <div class="inner-cube row" id="wbr">
+                <!--/SQUARE CENTER-->
+                <!--SQUARE RIGHT-->
+                <div class="square row wrap">
+                    <div class="inner-square row" id="wbr">
                         <img src="img/world_bicycle_relief.svg" alt="world bicycle relief">
                     </div>
-                    <div class="inner-cube row" id="hearst">
+                    <div class="inner-square row" id="hearst">
                         <img src="img/hearst_corp.svg" alt="hearst">
                     </div>
-                    <div class="inner-cube row" id="lonely-planet">
+                    <div class="inner-square row" id="lonely-planet">
                         <img src="img/lonely_planet.svg" alt="lonely planet">
                     </div>
-                    <div class="inner-cube row" id="clear-channel">
+                    <div class="inner-square row" id="clear-channel">
                         <image src="img/clear_channel.svg" alt="clear channel" class="change-color">
                     </div>
                 </div>
-                <!--/CUBE RIGHT-->
+                <!--/SQUARE RIGHT-->
             </div>
             <div class="porta-dropbox row">
                 <div class="small-container row">
@@ -443,7 +441,7 @@
                 </div>
             </div>
         </section>
-        <!--/SECTION 5-->
+        <!--/SECTION 5 PARTNERS-->
         <!--SECTION 6-->
         <section class="section-6 small-container">
             <h2>Domande frequenti</h2>
