--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </li>
                 <li class="row">
                     <div>
-                        <button class="primary s">
+                        <button class="primary inizia">
                             <a href="#" alt="inizia">Inizia</a>
                         </button>
                     </div>
@@ -62,9 +62,9 @@
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box row">
                     <!--COL-1-->
-                    <div class="col-1 column">
+                    <div class="w-30 column">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit. Ullam eaque ducimus velit.</p>
-                        <button class="primary m">
+                        <button class="primary">
                             <a href="#" alt="prova gratuita">Inizia la tua prova gratuita</a>
                         </button>
                         <div>Annulla in qualsiasi momento</div>
@@ -72,7 +72,7 @@
                     </div>
                     <!--/COL-1-->
                     <!--COL-2-->
-                    <div class="col-2">
+                    <div class="w-70">
                         <img src="img/jumbo.png" alt="jumbo">
                     </div>
                     <!--/COL-2-->
@@ -98,7 +98,7 @@
             <!--COLUMNS ROW-->
             <div class="columns row wrap">
                 <!--SINGOLO COLUMN-->
-                <div class="small-col">
+                <div class="w-30">
                     <!--COLUMN HEADER-->
                     <div class="col-header row">
                         <i class="fa-solid fa-user"></i>
@@ -161,7 +161,7 @@
                 </div>
                 <!--/SINGOLO COLUMN-->
                 <!--TEAM COLUMN-->
-                <div class="small-col">
+                <div class="w-30">
                     <!--COLUMN HEADER-->
                     <div class="col-header row">
                         <i class="fa-solid fa-users"></i>
@@ -240,7 +240,7 @@
                 </div>
                 <!--/TEAM COLUMN-->
                 <!--ENTERPRISE COLUMN-->
-                <div class="small-col">
+                <div class="w-30">
                     <!--COLUMN HEADER-->
                     <div class="col-header row">
                         <i class="fa-sharp fa-solid fa-building"></i>
@@ -304,13 +304,13 @@
             </div>    
             <!--/COLUMNS ROW-->
             <!--BIG COLUMN-->
-            <div class="big-col">
+            <div class="w-100">
                 <div class="col-header row">
                     <i class="fa-sharp fa-solid fa-building"></i>
                     <span>Team</span>
                 </div>
                 <div class="col-content row">
-                    <div class="half-box">
+                    <div class="w-50">
                         <h3>Enterprise</h3>
                         <strong>Contatta l'ufficio vendite per i prezzi</strong>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
@@ -327,10 +327,10 @@
         <!--/SECTION 2-->
         <!--SECTION 3-->
         <section class="section-3 small-container row">
-            <div class="big-box">
+            <div class="w-60">
                 <img src="img/partner.png" alt="partner">
             </div>
-            <div class="content-box small-box">
+            <div class="content-box w-40">
                 <h3>Entra in contatto con un partner dropbox</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore est magnam quidem iure ipsa cumque, aut ipsum tempora ad repellat! Voluptatibus quas labore alias asperiores iste ipsa. Vitae, voluptates veritatis.</p>
                 <button class="secondary">
@@ -343,39 +343,39 @@
         <section class="section-4 small-container">
             <h2>Esegui più operazioni con dropbox business</h2>
             <div class="columns row wrap">
-                <div class="small-col">
+                <div class="w-30">
                     <img src="img/business-feature-switching-tools.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
                 </div>
-                <div class="small-col">
+                <div class="w-30">
                     <img src="img/business-feature-send-files-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
                 </div>
-                <div class="small-col">
+                <div class="w-30">
                     <img src="img/business-feature-coordinate-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
                 </div>
-                <div class="small-col">
+                <div class="w-30">
                     <img src="img/business-feature-integrations-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
                 </div>
-                <div class="small-col">
+                <div class="w-30">
                     <img src="img/business-feature-multi-device.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
                 </div>
-                <div class="small-col">
+                <div class="w-30">
                     <img src="img/business-feature-security.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
                 </div>
             </div>
             <div class="team small-container">
-                <div class="half-box">
+                <div class="w-50">
                     <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
                     <a href="#" alt="clienti">Scopri di più sui nostri clienti</a>
                 </div>
@@ -430,7 +430,7 @@
             </div>
             <div class="porta-dropbox row">
                 <div class="small-container row">
-                    <div class="small-box">
+                    <div class="w-40">
                         <h2>Porta Dropbox Business nella tua azienda.</h2>
                     </div>
                     <div>
@@ -445,7 +445,7 @@
         <!--SECTION 6-->
         <section class="section-6 small-container">
             <h2>Domande frequenti</h2>
-            <div class="faq big-col">
+            <div class="faq w-100">
                 <hr>  
                 <div class="row">
                     <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
