fix classi colonne section 2

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
             <!--COLUMNS ROW-->
             <div class="columns row wrap">
                 <!--SINGOLO COLUMN-->
-                <div class="w-30">
+                <div class="col w-30">
                     <!--COLUMN HEADER-->
-                    <div class="col-header row">
+                    <header class="row">
                         <i class="fa-solid fa-user"></i>
                         <span>Singolo</span>
-                    </div>
+                    </header>
                     <!--/COLUMN HEADER-->
-                    <!--COLUMN CONTENT-->
-                    <div class="col-content column">
+                    <!--COLUMN ARTICLE-->
+                    <article class="column">
                         <div class="main-infos">
                             <h3>Professional</h3>
                             <strong>€ 12.00</strong>
@@ -156,20 +156,20 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <!--/COLUMN CONTENT-->
+                    </article>
+                    <!--/COLUMN ARTICLE-->
                 </div>
                 <!--/SINGOLO COLUMN-->
                 <!--TEAM COLUMN-->
-                <div class="w-30">
+                <div class="col w-30">
                     <!--COLUMN HEADER-->
-                    <div class="col-header row">
+                    <header class="row">
                         <i class="fa-solid fa-users"></i>
                         <span>Team</span>
-                    </div>
+                    </header>
                     <!--/COLUMN HEADER-->
-                    <!--COLUMN CONTENT-->
-                    <div class="col-content column">
+                    <!--COLUMN ARTICLE-->
+                    <article class="column">
                         <div class="main-infos">
                             <h3>Advanced</h3>
                             <strong>€ 18.00</strong>
@@ -235,20 +235,20 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <!--/COLUMN CONTENT-->
+                    </article>
+                    <!--/COLUMN ARTICLE-->
                 </div>
                 <!--/TEAM COLUMN-->
                 <!--ENTERPRISE COLUMN-->
-                <div class="w-30">
+                <div class="col w-30">
                     <!--COLUMN HEADER-->
-                    <div class="col-header row">
+                    <header class="row">
                         <i class="fa-sharp fa-solid fa-building"></i>
                         <span>Azienda</span>
-                    </div>
+                    </header>
                     <!--/COLUMN HEADER-->
-                    <!--COLUMN CONTENT-->
-                    <div class="col-content column">
+                    <!--COLUMN ARTICLE-->
+                    <article class="column">
                         <div class="main-infos">
                             <h3>Enterprise</h3>
                             <strong>Contattaci</strong>
@@ -298,31 +298,31 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <!--/COLUMN CONTENT-->
+                    </article>
+                    <!--/COLUMN ARTICLE-->
                 </div>
+                <!--BIG COLUMN-->
+                <div class="col">
+                    <header class="row">
+                        <i class="fa-sharp fa-solid fa-building"></i>
+                        <span>Team</span>
+                    </header>
+                    <article class="row">
+                        <div class="w-50">
+                            <h3>Enterprise</h3>
+                            <strong>Contatta l'ufficio vendite per i prezzi</strong>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
+                        </div>  
+                        <div>
+                            <button class="primary">
+                                <a href="#" alt="contatta l'ufficio vendite">Contatta l'ufficio vendite</a>
+                            </button>
+                        </div>
+                    </article>
+                </div>
+                <!--/BIG COLUMN-->
             </div>    
             <!--/COLUMNS ROW-->
-            <!--BIG COLUMN-->
-            <div class="w-100">
-                <div class="col-header row">
-                    <i class="fa-sharp fa-solid fa-building"></i>
-                    <span>Team</span>
-                </div>
-                <div class="col-content row">
-                    <div class="w-50">
-                        <h3>Enterprise</h3>
-                        <strong>Contatta l'ufficio vendite per i prezzi</strong>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
-                    </div>  
-                    <div>
-                        <button class="primary">
-                            <a href="#" alt="contatta l'ufficio vendite">Contatta l'ufficio vendite</a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <!--/BIG COLUMN-->
         </section>
         <!--/SECTION 2-->
         <!--SECTION 3-->
