fix errori e box shadow header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!--NAV-->
         <nav class="row">
             <ul class="row">
-                <li class="logo-li row">
+                <li class="logo-li row align-c">
                     <a href="#" class="logo">
                         <img src="img/logo-small.png" alt="logo">
                     </a>
@@ -42,7 +42,7 @@
                 <li>
                     <a href="#" alt="accedi">Accedi</a>
                 </li>
-                <li class="row">
+                <li class="row align-c">
                     <div>
                         <button class="primary inizia">
                             <a href="#" alt="inizia">Inizia</a>
@@ -57,8 +57,8 @@
     <!--MAIN-->
     <main>
         <!--JUMBOTRON-->
-        <div class="jumbotron w-100">
-            <section class="big-container">
+        <section class="section-1 w-100 azure">
+            <div class="jumbotron big-container">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box row">
                     <!--COL-1-->
@@ -77,8 +77,8 @@
                     </div>
                     <!--/COL-2-->
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
         <!--/JUMBOTRON-->
         <!--SECTION 2-->
         <section class="section-2 small-container">
@@ -100,7 +100,7 @@
                 <!--SINGOLO COLUMN-->
                 <div class="col w-30">
                     <!--COLUMN HEADER-->
-                    <header class="row">
+                    <header class="row justify-c align-c">
                         <i class="fa-solid fa-user"></i>
                         <span>Singolo</span>
                     </header>
@@ -163,7 +163,7 @@
                 <!--TEAM COLUMN-->
                 <div class="col w-30">
                     <!--COLUMN HEADER-->
-                    <header class="row">
+                    <header class="row justify-c align-c">
                         <i class="fa-solid fa-users"></i>
                         <span>Team</span>
                     </header>
@@ -242,7 +242,7 @@
                 <!--ENTERPRISE COLUMN-->
                 <div class="col w-30">
                     <!--COLUMN HEADER-->
-                    <header class="row">
+                    <header class="row justify-c align-c">
                         <i class="fa-sharp fa-solid fa-building"></i>
                         <span>Azienda</span>
                     </header>
@@ -303,7 +303,7 @@
                 </div>
                 <!--BIG COLUMN-->
                 <div class="col">
-                    <header class="row">
+                    <header class="row justify-c align-c">
                         <i class="fa-sharp fa-solid fa-building"></i>
                         <span>Team</span>
                     </header>
@@ -387,18 +387,18 @@
             <div class="partners row">
                 <!--SQUARE LEFT-->
                 <div class="square row wrap">
-                    <div class="inner-square" id="designit">
+                    <div class="inner-square justify-c" id="designit">
                         <div class="row">
                             <img src="img/designit.svg" alt="designit">
                         </div>
                     </div>
-                    <div class="inner-square row" id="asu">
+                    <div class="inner-square justify-c row" id="asu">
                         <img src="img/arizona_state_university.svg" alt="asu">
                     </div>
-                    <div class="inner-square row" id="u-florida">
+                    <div class="inner-square justify-c row" id="u-florida">
                         <img src="img/university_of_florida.svg" alt="university of florida">
                     </div>
-                    <div class="inner-square row" id="topps">
+                    <div class="inner-square justify-c row" id="topps">
                         <img src="img/topps.svg" alt="topps">
                     </div>
                 </div>
@@ -413,23 +413,23 @@
                 <!--/SQUARE CENTER-->
                 <!--SQUARE RIGHT-->
                 <div class="square row wrap">
-                    <div class="inner-square row" id="wbr">
+                    <div class="inner-square justify-c row" id="wbr">
                         <img src="img/world_bicycle_relief.svg" alt="world bicycle relief">
                     </div>
-                    <div class="inner-square row" id="hearst">
+                    <div class="inner-square justify-c row" id="hearst">
                         <img src="img/hearst_corp.svg" alt="hearst">
                     </div>
-                    <div class="inner-square row" id="lonely-planet">
+                    <div class="inner-square justify-c row" id="lonely-planet">
                         <img src="img/lonely_planet.svg" alt="lonely planet">
                     </div>
-                    <div class="inner-square row" id="clear-channel">
+                    <div class="inner-square justify-c row" id="clear-channel">
                         <image src="img/clear_channel.svg" alt="clear channel" class="change-color">
                     </div>
                 </div>
                 <!--/SQUARE RIGHT-->
             </div>
-            <div class="porta-dropbox row">
-                <div class="small-container row">
+            <div class="porta-dropbox azure w-100 row justify-c align-c">
+                <div class="small-container row justify-sb">
                     <div class="w-40">
                         <h2>Porta Dropbox Business nella tua azienda.</h2>
                     </div>
@@ -447,21 +447,21 @@
             <h2>Domande frequenti</h2>
             <div class="faq w-100">
                 <hr>  
-                <div class="row">
+                <div class="row justify-sb">
                     <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                     <div>
                         <i class="fa-solid fa-angle-down"></i>
                     </div>
                 </div>
                 <hr>
-                <div class="row">
+                <div class="row justify-sb">
                     <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                     <div>
                         <i class="fa-solid fa-angle-down"></i>
                     </div>
                 </div>
                 <hr>
-                <div class="row">
+                <div class="row justify-sb">
                     <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                     <div>
                         <i class="fa-solid fa-angle-down"></i>
@@ -475,9 +475,9 @@
     <!--/MAIN-->
     <!--FOOTER-->
     <footer>
-        <div class="footer-container column">
+        <div class="footer-container column justify-sb">
             <div class="footer-columns row">
-                <div class="col">
+                <div class="footer-col">
                     <h3>Dropbox</h3>
                     <ul>
                         <li>
@@ -497,7 +497,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="footer-col">
                     <h3>Prodotti</h3>
                     <ul>
                         <li>
@@ -517,7 +517,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="footer-col">
                     <h3>Azienda</h3>
                     <ul>
                         <li>
@@ -537,7 +537,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="footer-col">
                     <h3>Supporto</h3>
                     <ul>
                         <li>
@@ -557,7 +557,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="footer-col">
                     <h3>Community</h3>
                     <ul>
                         <li>
