fix margini tag h

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--HEADER-->
     <header>
         <!--NAV-->
-        <nav class="row">
+        <nav class="row justify-sb">
             <ul class="row">
                 <li class="logo-li row align-c">
                     <a href="#" class="logo">
@@ -96,7 +96,7 @@
             </div>
             <!--/RADIO INPUT-->
             <!--COLUMNS ROW-->
-            <div class="columns row wrap">
+            <div class="columns row justify-sb wrap">
                 <!--SINGOLO COLUMN-->
                 <div class="col w-30">
                     <!--COLUMN HEADER-->
@@ -106,7 +106,7 @@
                     </header>
                     <!--/COLUMN HEADER-->
                     <!--COLUMN ARTICLE-->
-                    <article class="column">
+                    <article>
                         <div class="main-infos">
                             <h3>Professional</h3>
                             <strong>€ 12.00</strong>
@@ -169,7 +169,7 @@
                     </header>
                     <!--/COLUMN HEADER-->
                     <!--COLUMN ARTICLE-->
-                    <article class="column">
+                    <article>
                         <div class="main-infos">
                             <h3>Advanced</h3>
                             <strong>€ 18.00</strong>
@@ -248,7 +248,7 @@
                     </header>
                     <!--/COLUMN HEADER-->
                     <!--COLUMN ARTICLE-->
-                    <article class="column">
+                    <article>
                         <div class="main-infos">
                             <h3>Enterprise</h3>
                             <strong>Contattaci</strong>
@@ -307,7 +307,7 @@
                         <i class="fa-sharp fa-solid fa-building"></i>
                         <span>Team</span>
                     </header>
-                    <article class="row">
+                    <article class="row justify-sb">
                         <div class="w-50">
                             <h3>Enterprise</h3>
                             <strong>Contatta l'ufficio vendite per i prezzi</strong>
@@ -342,7 +342,7 @@
         <!--SECTION 4-->
         <section class="section-4 small-container">
             <h2>Esegui più operazioni con dropbox business</h2>
-            <div class="columns row wrap">
+            <div class="columns row justify-sb wrap">
                 <div class="w-30">
                     <img src="img/business-feature-switching-tools.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
@@ -447,21 +447,21 @@
             <h2>Domande frequenti</h2>
             <div class="faq w-100">
                 <hr>  
-                <div class="row justify-sb">
+                <div class="row justify-sb align-c">
                     <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                     <div>
                         <i class="fa-solid fa-angle-down"></i>
                     </div>
                 </div>
                 <hr>
-                <div class="row justify-sb">
+                <div class="row justify-sb align-c">
                     <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                     <div>
                         <i class="fa-solid fa-angle-down"></i>
                     </div>
                 </div>
                 <hr>
-                <div class="row justify-sb">
+                <div class="row justify-sb align-c">
                     <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                     <div>
                         <i class="fa-solid fa-angle-down"></i>
@@ -476,6 +476,7 @@
     <!--FOOTER-->
     <footer>
         <div class="footer-container column justify-sb">
+            <!--COLONNE FOOTER-->
             <div class="footer-columns row">
                 <div class="footer-col">
                     <h3>Dropbox</h3>
@@ -578,6 +579,8 @@
                     </ul>
                 </div>
             </div>
+            <!--/COLONNE FOOTER-->
+            <!--LANGUAGE-->
             <div class="lang">
                 <hr>
                 <div>
@@ -588,6 +591,7 @@
                     </a>
                 </div>
             </div>
+            <!--/LANGUAGE-->
         </div>
     </footer>
     <!--/FOOTER-->
