fix struttura colonne section 2

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <!--/RADIO INPUT-->
-            <!--COLUMNS ROW-->
+            <!--COLUMNS-->
             <div class="columns row justify-sb wrap">
                 <!--SINGOLO COLUMN-->
                 <div class="col w-30">
@@ -111,27 +111,27 @@
                             <h3>Professional</h3>
                             <strong>€ 12.00</strong>
                             <div>/mese</div>
-                        </div>
-                        <ul>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-user"></i>
-                                </div>
-                                <span>1 utente</span>
-                            </li>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-folder"></i>
-                                </div>
-                                <span>5 TB di spazio di archiviazione sicuro</span>
-                            </li>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-share-nodes"></i>
-                                </div>
-                                <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-                            </li>
-                        </ul>
+                            <ul>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-user"></i>
+                                    </div>
+                                    <span>1 utente</span>
+                                </li>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-folder"></i>
+                                    </div>
+                                    <span>5 TB di spazio di archiviazione sicuro</span>
+                                </li>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                    </div>
+                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                </li>
+                            </ul>
+                        </div>    
                         <div>
                             <button class="primary">
                                 <a href="#" alt="prova gratis">Prova gratis per 30 giorni</a>
@@ -174,27 +174,27 @@
                             <h3>Advanced</h3>
                             <strong>€ 18.00</strong>
                             <div>/utente/mese</div>
+                            <ul>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-user"></i>
+                                    </div>
+                                    <span>1 utente</span>
+                                </li>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-folder"></i>
+                                    </div>
+                                    <span>5 TB di spazio di archiviazione sicuro</span>
+                                </li>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                    </div>
+                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                </li>
+                            </ul>
                         </div>
-                        <ul>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-user"></i>
-                                </div>
-                                <span>1 utente</span>
-                            </li>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-folder"></i>
-                                </div>
-                                <span>5 TB di spazio di archiviazione sicuro</span>
-                            </li>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-share-nodes"></i>
-                                </div>
-                                <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-                            </li>
-                        </ul>
                         <div>
                             <button class="primary">
                                 <a href="#" alt="prova gratis">Prova gratis per 30 giorni</a>
@@ -253,27 +253,27 @@
                             <h3>Enterprise</h3>
                             <strong>Contattaci</strong>
                             <div>-</div>
+                            <ul>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-user"></i>
+                                    </div>
+                                    <div>10 o più utenti</div>
+                                </li>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-folder"></i>
+                                    </div>
+                                    <div>5 TB di spazio di archiviazione sicuro</div>
+                                </li>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                    </div>
+                                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                                </li>
+                            </ul>
                         </div>
-                        <ul>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-user"></i>
-                                </div>
-                                <div>10 o più utenti</div>
-                            </li>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-folder"></i>
-                                </div>
-                                <div>5 TB di spazio di archiviazione sicuro</div>
-                            </li>
-                            <li class="row">
-                                <div>
-                                    <i class="fa-solid fa-share-nodes"></i>
-                                </div>
-                                <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
-                            </li>
-                        </ul>
                         <div>
                             <button class="primary">
                                 <a href="#" alt="prova gratis">Prova gratis per 30 giorni</a>
@@ -322,7 +322,7 @@
                 </div>
                 <!--/BIG COLUMN-->
             </div>    
-            <!--/COLUMNS ROW-->
+            <!--/COLUMNS-->
         </section>
         <!--/SECTION 2-->
         <!--SECTION 3-->
