fix button e footer

--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
                     <a href="#" alt="accedi">Accedi</a>
                 </li>
                 <li class="row align-c">
-                    <div>
-                        <button class="primary inizia">
-                            <a href="#" alt="inizia">Inizia</a>
-                        </button>
-                    </div>
+                    <button class="primary inizia">
+                        <a href="#" alt="inizia">Inizia</a>
+                    </button>
                 </li>
             </ul>
         </nav>    
@@ -62,7 +60,7 @@
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box row">
                     <!--COL-1-->
-                    <div class="w-30 column">
+                    <div class="w-30">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit. Ullam eaque ducimus velit.</p>
                         <button class="primary">
                             <a href="#" alt="prova gratuita">Inizia la tua prova gratuita</a>
@@ -582,14 +580,11 @@
             <!--/COLONNE FOOTER-->
             <!--LANGUAGE-->
             <div class="lang">
-                <hr>
-                <div>
-                    <i class="fa-solid fa-earth-americas"></i>
-                    <span>Italiano</span>
-                    <a href="#">
-                        <i class="fa-solid fa-angle-up"></i>
-                    </a>
-                </div>
+                <i class="fa-solid fa-earth-americas"></i>
+                <span>Italiano</span>
+                <a href="#">
+                    <i class="fa-solid fa-angle-up"></i>
+                </a>
             </div>
             <!--/LANGUAGE-->
         </div>
